# Lyceum-Project

./: .gitignore  CMakeLists.txt  Extractor.cpp  Extractor.h  StringHelper.cpp  StringHelper.h  main.cpp
CMakeProject/: CMakeLists.txt  Extractor.cpp  Extractor.h  main.cpp
CMakeProject/texts/: 2.txt
Classes/: Extractor.cpp
Helpers/: StringHelper.cpp
src/: main.cpp
src/Classes/: Comparator.cpp  Comparator.h  Extractor.cpp  Extractor.h  Main.cpp  Main.h  main.h
src/Helpers/: OutputHelper.cpp  OutputHelper.h  StdVectorHelper.cpp  StdVectorHelper.h  StringHelper.cpp  StringHelper.h  VectorHelper.cpp  VectorHelper.h
texts/: 0.txt  1.txt  1L.txt  2.txt  2L.txt  3.txt  3L.txt  4.txt  4L.txt  5.txt
texts/test/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
